@@ -1,6 +1,6 @@
 """
-autogenerated by gensetup.py
-         
+py lib / py.test setup.py file, autogenerated by gensetup.py
+        
 """
 import os, sys
         
@@ -30,7 +30,7 @@ def main():
         name='py',
         description='py.test and pylib: advanced testing tool and networking lib',
         long_description = long_description, 
-        version='1.0.0b7', 
+        version='1.0.0b8', 
         url='http://pylib.org', 
         license='MIT license',
         platforms=['unix', 'linux', 'osx', 'cygwin', 'win32'], 
